# rust_api

./: Cargo.toml  README.md
src/: error.rs  error2.rs  main.rs
src/web/: routes_login.rs
src/web2/: mod.rs  routes_login2.rs
tests/: quick_dev.rs
