[package]
name = "rust-solo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
tower-cookies = "0.11.0"
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dependencies.uuid]
version = "1.18.1"
features = ["v4", "serde"]

[dev-dependencies]
httpc-test = "0.1.10"
anyhow = "1.0.100"
